--- a/.gitignore
+++ b/.gitignore
@@ -16,18 +16,14 @@
 # misc
 .DS_Store
 *.pem
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# environment variables
+.env
 .env*.local
 
 # vercel
