--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "next": "14.1.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
